--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>UwU-tetris</title>
+  <link rel="shortcut icon" href="css/images/free-icon-tetris-914732.png" type="image/png">
   <link href="css/style.css" rel="stylesheet">
   <meta charset="UTF-8">
 </head>
 
 <body>
   <!-- рисуем поле для игры -->
-
+  
   <div id="pole">
     <div id="canvasPole">
       <canvas width="320" height="640" id="game"></canvas>
@@ -23,6 +24,14 @@
         <p id="elmcnt">фигура: 0</p>
         <p id="award">рекорд: 0</p>
       </div>
+    </div>
+  </div>
+  <div id="key">
+    <input id="up" type="button" value="up"> 
+    <div>
+      <input id="left" type="button" value="left"> 
+      <input id="down" type="button" value="down">
+      <input id="right" type="button" value="right">
     </div>
   </div>
     <script src="js/script.js"></script>
